[package]
name = "jfs"
version = "0.1.0"
authors = ["Olaf Leidinger <oleid@mescharet.de>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = { version = "0.7", features = ["tls"] }
base64 = "0.9"
bytes =  { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.2"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
md5 = "0.6"
mime = "0.3"
mpart-async = "0.2.0"
pretty_env_logger = "0.2"
quick-xml = "0.12"

[dev-dependencies]
keyring = "0.6.0"
rpassword = "2.0"
