[package]
name = "jottaclient"
version = "0.1.0"
authors = ["Olaf Leidinger <oleid@mescharet.de>"]

[dependencies]
failure = "0.1"
futures = "0.1"

jfs =  { path = "../jfs" }
keyring = "0.6.0"
log = "0.4"
mime = "0.3"
pretty_env_logger = "0.2"
quick-xml = "0.12"
rpassword = "2.0"
tokio-core = "0.1"
